--- a/README
+++ b/README
@@ -1,6 +1,11 @@
 Description
 Programmable commandline curl program
 
+Usage
+The executable accept one argument, the config file name, if missing search for config.xml in the current directory.
+
+Example: htping.exe [Config-File-Name]
+
 
 The MIT License (MIT)
 Copyright (c) 2012 Alessandro Cappellozza (alessandro.cappellozza@gmail.com)
