Source Tree Changes
New Structure
New Name HTTPING

--- a/README
+++ b/README
@@ -7,7 +7,7 @@ The project is an alpha release, not suitable for production environments.
 USAGE
 The executable accept one argument, the config file name, if missing search for config.xml in the current directory.
 
-Example: htping.exe [Config-File-Name]
+Example: httping.exe [Config-File-Name]
 
 LICENSE
 The MIT License (MIT)
